# build-engine

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  build_engine_analysis.md  manifest.json  pyproject.toml
.githooks/: README.md  pre-commit  pre-push
.github/workflows/: actionlint.yml  ci.yml  dependency-review.yml  release.yml
contracts/image-manifest/: manifest.schema.json
contracts/openapi/: build-engine.openapi.json  build-engine.openapi.sha256
contracts/protocol/: wss-v1.json
docs/: README.md  build-engine-design.md  build-engine-images-design.md  build-engine-operations.md  build-engine-release.md  contract-lock.md  coreapp-design.md  design-plan.md  design.md  operations.md  protocol.md  release.md
packaging/deb/: README.md  build-deb.sh
packaging/pyinstaller/: build-engine.spec
packaging/systemd/: build-engine.service
scripts/: install-build-engine.sh  install-git-hooks.sh  prepare-release.sh  release-artifacts.sh  smoke-ubuntu-24.04.sh  sync_contracts.py  verify-release.sh
src/build_engine/: __init__.py  __main__.py  config.py  main.py
src/build_engine/agent/: __init__.py  auth.py  heartbeat.py  job_loop.py  protocol.py  uplink.py
src/build_engine/cli/: commands.py  doctor.py  logging.py
src/build_engine/detect/: __init__.py  compatibility.py  framework.py  lockfiles.py  package_json.py
src/build_engine/executor/: __init__.py  artifact.py  cache.py  docker_runner.py  network.py  stream.py  validate.py  workspace.py
src/build_engine/metrics/: collector.py  reporter.py
src/build_engine/queue/: __init__.py  dlq.py  handlers.py  leases.py  store.py
tests/: _fakes.py  conftest.py  test_auth.py  test_cache_metrics.py  test_changelog.py  test_cli.py  test_config.py  test_contract_pins.py  test_contracts.py  test_detection.py  test_executor.py  test_hardening.py  test_packaging_ops.py  test_protocol.py  test_protocol_properties.py  test_queue.py  test_uplink.py  test_v1_ga_fixture_smoke.py
tests/fixtures/sites/: _regenerate.sh
tests/fixtures/sites/astro-blog/: package.json  pnpm-lock.yaml
tests/fixtures/sites/docusaurus-docs/: package-lock.json  package.json
tests/fixtures/sites/eleventy-blog/: package-lock.json
tests/fixtures/sites/gatsby-blog/: package-lock.json  package.json
tests/integration/: __init__.py  test_docker.py  test_final_images.py  test_uplink.py
(+16 files in other folders)
