[project]
name = "mincemeat-build-engine"
version = "0.2.0"
description = "Standalone Mincemeat static-site build engine agent."
readme = "README.md"
requires-python = ">=3.14"
license = "AGPL-3.0-or-later"
authors = [
  { name = "Mincemeat maintainers" },
]
dependencies = [
  "packaging>=25.0",
  "websockets>=15.0.0",
]

[project.scripts]
build-engine = "build_engine.cli.commands:main"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "coverage[toml]>=7.14.0",
  "hypothesis>=6.152.9",
  "mypy>=2.1.0",
  "pre-commit>=4.5.0",
  "pyinstaller>=6.17.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.0",
  "ty>=0.0.36",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
build_engine = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["F401"]
"tests/**" = ["ANN", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["build_engine"]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.ty.environment]
python-version = "3.14"
python-platform = "linux"
